tests/ui/privacy/projections2.stderr
warning: type `Priv` is more private than the item `Leak`
  --> $DIR/projections2.rs:4:5
   |
LL |     pub type Leak = Priv;
   |     ^^^^^^^^^^^^^ type alias `Leak` is reachable at visibility `pub(crate)`
   |
note: but type `Priv` is only usable at visibility `pub(self)`
  --> $DIR/projections2.rs:3:5
   |
LL |     struct Priv;
   |     ^^^^^^^^^^^
   = note: `#[warn(private_interfaces)]` on by default

error[E0446]: private type `Priv` in public interface
  --> $DIR/projections2.rs:19:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type A<T: Trait> = <u8 as Trait3>::A<T>;
   |         ^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0446`.
